--- a/GymWebApp/appsettings.json
+++ b/GymWebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=chloepope.mysql.database.azure.com; Port=3306; Database=gymnastdb; Uid=chloep@chloepope; Pwd=Defor2012#; SslMode=Preferred;"
+    "DefaultConnection": "Server=chloep.mysql.database.azure.com; Port=3306; Database=gymnastdb; Uid=chloepope00@chloep; Pwd=Defor2012#; SslMode=Preferred;"
   }
 }
