--- a/GymWebApp/GymWebApp.csproj
+++ b/GymWebApp/GymWebApp.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <NoWin32Manifest>true</NoWin32Manifest>
+	 <TargetFramework>net5.0</TargetFramework>
+  
   </PropertyGroup>
 
   <ItemGroup>
